# AutoAnalyst-Ai

./: .gitignore  .replit  README.md  build.sh  pyproject.toml  render.yaml  requirements.txt
.agents/memory/: MEMORY.md  chat-architecture.md
AutoAnalyst/: manage.py
AutoAnalyst/AutoAnalyst/: settings.py  urls.py  wsgi.py
AutoAnalyst/apps/chat/: gemini_client.py  models.py  urls.py  views.py
AutoAnalyst/apps/chat/migrations/: 0001_initial.py
AutoAnalyst/apps/core/: models.py  views.py
AutoAnalyst/apps/core/migrations/: 0001_initial.py
AutoAnalyst/apps/dashboard/: models.py  urls.py  views.py
AutoAnalyst/apps/dataset/: apps.py  urls.py  views.py
AutoAnalyst/apps/ml/: apps.py  urls.py  views.py
AutoAnalyst/apps/predict/: apps.py  urls.py  views.py
AutoAnalyst/saved_models/: best_model.joblib  metadata.json
AutoAnalyst/saved_models/3337q6t04ccvx0gevt02nwibrykgguui/: metadata.json
AutoAnalyst/static/css/: base.css  chat.css  dashboard.css  home.css  predict.css  result.css  style.css  upload.css  visualize.css
AutoAnalyst/static/js/: main.js
AutoAnalyst/templates/: base.html  chat.html  dashboard.html  home.html  login.html  predict.html  preview.html  privacy.html  profile.html  result.html  select_target.html  signup.html  terms.html  upload.html  visualize.html
attached_assets/: Pasted--PIPELINE-WORKFLOW-1-Dataset-Upload-Accept-CSV-XLSX-onl_1780727585779.txt  Pasted--REPLIT-PROMPT-COPY-PASTE-You-are-building-a-full-stack_1780726832372.txt  Pasted--h1-Final-Project-for-Supervised-Machine-Learning-h1-h1_1780758317869.txt
(+9 files in other folders)
